# rustdesk-cli

./: .gitignore  ARCHITECTURE_PIVOT.md  Cargo.toml  DESIGN.md  DESIGN_ERROR_HANDLING.md  DESIGN_INDEX.md  DESIGN_SHELL_STREAMING.md  DESIGN_TEXT_OPTIMIZATIONS.md  DESIGN_TEXT_SESSION.md  DESIGN_UDS_PROTOCOL.md  README.md  RESEARCH.md  SPEC.md  TASK_LEO.md  TASK_LEO_TEXTOPT.md  TASK_NOVA_TEXTOPT.md  TEST_CONFIG.md  build.rs  findings.md  probe_peer.rs  progress.md  task_plan.md
docs/: dogfood_guide.md
docs/plans/: rmsnorm_deployment.md
docs/research/: README.md  attention_op.py  clipboard_protocol.md  connection_pooling.md  daemon_binary_replacement.md  daemon_lifecycle.md  daemon_socket_lifecycle.md  embedding_operator.md  error_handling_exit_codes.md  evas_architecture_insights.md  evas_e200_public_research.md  evas_hardware_constraints.md  evas_learning_report.md  exec_command_limits.md  exec_timeout_streaming.md  file_transfer_protocol.md  file_transfer_pull.md  file_transfer_session_init.md  fork_vs_build_recommendation.md  hbbr_relay_matching.md  hbbs_punch_hole_protocol.md  heartbeat_reconnect.md  heartbeat_reconnect_impl.md  key_exchange_client_response.md  key_types_and_usage.md  (+32 more)
src/: capture.rs  connection.rs  crypto.rs  daemon.rs  file_transfer.rs  main.rs  permissions.rs  proto.rs  protocol.rs  rendezvous.rs  session.rs  terminal.rs  text_session.rs  transport.rs  version.rs
tests/: cli_error_regression_test.rs  cli_test.rs  e2e_connect_test.rs  live_server_test.rs  live_terminal_test.rs  probe_test.rs  tcp_probe_test.rs  udp_probe_test.rs
(+11 files in other folders)
